# vit-explainability-benchmark

./: .gitignore  BENCHMARK.md  Dockerfile  Literature Review and Gap Analysis for a ViT Explainability Benchmark.md  README.md  anaconda_compatibility_and_runtime_analysis.md  main.py  model_hashes.txt  project_status_checklist.md  pyproject.toml  requirements.txt  run_benchmark.sh  run_phase3.py  run_pilot.sh  task_2_2_localization_metrics.md  task_2_3_robustness_metrics.md
configs/: cub200.yaml  imagenet.yaml  imagenet_s50.yaml  nih_chestxray.yaml  pascal_voc.yaml  pilot.yaml
docs/: compute_budget_breakdown.md  implementation_guide.md  phase4_instructions.md
explainers/: __init__.py  base.py  chefer_lrp.py  dime.py  gradcam.py  lime.py  raw_attention.py  rise.py  rollout.py
metrics/: __init__.py  adversarial_robustness.py  axiom_verifier.py  causal_fidelity.py  complexity.py  explainer_interaction.py  fidelity.py  localization.py  normalize.py  robustness.py  runner.py  sanity.py  suite.py
model_zoo/: __init__.py  beit_b16.py  deit_b16.py  dino_vitb8.py  dinov2_vitb14.py  swin_b.py  vit_b16.py
paper/: draft_sections_1_to_4.tex  supplement.tex
scripts/: anonymised_submission_plan.md  create_cub_val_split.py  latex_proof_sketches.tex  phase4_ablations.py  phase4_correlation_analysis.py  phase4_interaction_analysis.py  pilot_finetune.py  plot_community_radar.py  plot_fidelity_curves.py  plot_interaction_graph.py  record_model_hashes.py  run_benchmark.py  tpami_latex_formatter.py  verify_datasets.py
tests/: test_adversarial_robustness.py  test_axiom_verifier.py  (+13 more)
(+7 files in other folders)
