[project]
name = "vit-explainability-benchmark"
version = "0.1.0"
description = "A comprehensive, axiomatically-grounded explainability benchmark for Vision Transformers (TPAMI)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Anonymous Authors", email = "anon@example.com" }
]
keywords = ["vision", "transformer", "explainability", "benchmark", "xai", "tpami"]
dependencies = [
    # Will be managed via requirements.txt or uv for precise pinning
]

[project.scripts]
vit-bench = "main:main"

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pytest>=9.0.3",
]
